update on mathjax usage

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -17,7 +17,8 @@
 {% endif %}
 
 <header class="header-section {% if page.cover-img %}has-img{% endif %}">
-<div class="intro-header {% if page.cover-img %} big-img {% endif %}">
+  <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico">
+  <div class="intro-header {% if page.cover-img %} big-img {% endif %}">
   {% if page.cover-img or page.title %}
   <div class="container-md">
     <div class="row">
