--- a/_includes/mathjax.html
+++ b/_includes/mathjax.html
@@ -1,3 +1,4 @@
+{% if page.mathjax %}
 <script type="text/javascript">
   MathJax = {
     options: {
@@ -8,3 +9,4 @@
   };
 </script>
 <script type="text/javascript" async src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
+{% endif %}
